--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <title>Promanagr</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-    
+
     <%= stylesheet_link_tag "https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
@@ -34,7 +34,7 @@
 
     <div id="navbar" class="navbar-menu">
       <div class="navbar-end">
-        <%# if user_signed_in? %>
+        <% if user_signed_in? %>
         <div class="navbar-item has-dropdown is-hoverable">
           <%#= link_to 'New', '#', class: "navbar-link" %>
           <div class="navbar-dropdown">
@@ -43,16 +43,16 @@
           </div>
         </div>
         <div class="navbar-item has-dropdown is-hoverable">
-          <%#= link_to 'Account', edit_user_registration_path, class: "navbar-link" %>
+          <%= link_to 'Account', edit_user_registration_path, class: "navbar-link" %>
           <div class="navbar-dropdown is-right">
-            <%#= link_to current_user.name, edit_user_registration_path, class:"navbar-item" %>
-            <%#= link_to "Log Out", destroy_user_session_path, method: :delete, class:"navbar-item" %>
+            <%= link_to current_user.name, edit_user_registration_path, class:"navbar-item" %>
+            <%= link_to "Log Out", destroy_user_session_path, method: :delete, class:"navbar-item" %>
           </div>
         </div>
-       <%# else %>
-        <%#= link_to "Sign In", new_user_session_path, class:"navbar-item" %>
-        <%#= link_to "Sign up", new_user_registration_path, class:"navbar-item"%>
-        <%# end %>
+       <% else %>
+        <%= link_to "Sign In", new_user_session_path, class:"navbar-item" %>
+        <%= link_to "Sign up", new_user_registration_path, class:"navbar-item"%>
+        <% end %>
       </div>
     </div>
   </nav>
