completed model associations

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -36,6 +36,9 @@
 	margin-bottom: 0;
 }
 
+.projects-column {
+	padding-top: 30px;
+}
 
 /* Padding http://tachyons.io/docs/layout/spacing/ */
 .pa0 { padding: var(--spacing-none); }
