--- a/app/views/teams/edit.html.erb
+++ b/app/views/teams/edit.html.erb
@@ -1,14 +1,11 @@
 <section class="section">
-	<%= 
-		content_tag :div, 
-		id: "team-form",
-		data: {
-			id: @team.id, 
-			team: @team.to_json(except: [:id, :created_at, :updated_at]),
-			user_attributes: @team.users.to_json(except: [:created_at, :updated_at])
-					} 
-		do 
-	%>
+	<%= content_tag :div,
+			id: "team-form",
+			data: {
+				id: @team.id,
+				team: @team.to_json(except: [:id, :created_at, :update_at]),
+				users_attributes: @team.users.to_json(except: [:created_at, :update_at])
+			} do %>
 		
 		<div class="columns is-centered">
 			<div class="column is-4">
