--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -40,6 +40,53 @@
 	padding-top: 30px;
 }
 
+.utility-buttons {
+	position: fixed;
+	bottom: 20px;
+	right: 20px;
+}
+
+/* Team forms */
+.formstatic {
+  position: absolute;
+  left: 50px;
+  @media screen and (max-width: 1450px) {
+    position: static;
+  }
+}
+
+.formfixed {
+  position: absolute;
+  left: 50px;
+  @media screen and (max-width: 1450px) {
+    position: static;
+  }
+}
+.datastatic {
+  position: absolute;
+  right: 50px;
+  padding-left: 1em;
+  width: 500px;
+  @media screen and (max-width: 1450px) {
+    padding: 0;
+    width: 100%;
+    margin: 1em 0;
+  }
+}
+.datafixed  {
+  position: fixed;
+  right: 50px;
+  padding: 40px;
+  box-shadow: 0 5px 10px 0 rgba(black, .2);
+  @media screen and (max-width: 1450px) {
+    position: static;
+    right: 0;
+    margin: 1em 0;
+    width: 100%;
+  }
+
+}
+
 /* Padding http://tachyons.io/docs/layout/spacing/ */
 .pa0 { padding: var(--spacing-none); }
 .pa1 { padding: var(--spacing-extra-small); }
