--- a/app/views/home/_dashboard.html.erb
+++ b/app/views/home/_dashboard.html.erb
@@ -1,6 +1,6 @@
 <section class="section pt3">
 	<p class="title is-5 border-bottom pb3 has-text-centered">Howdy <%= current_user.name %> 🤠</p>
-	<div class="columns">
+	<div class="columns is-desktop">
 		<div class="column border-right ph4">
 
 			<div class="level">
