--- a/app/views/teams/edit.html.erb
+++ b/app/views/teams/edit.html.erb
@@ -4,7 +4,7 @@
 			data: {
 				id: @team.id,
 				team: @team.to_json(except: [:id, :created_at, :update_at]),
-				users_attributes: @team.users.to_json(except: [:created_at, :update_at])
+				user_attributes: @team.users.to_json(except: [:created_at, :update_at])
 			} do %>
 		
 		<div class="columns is-centered">
