--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,16 +10,16 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'promanagr' %>
   </head>
-    <% if flash[:notice] %>
-      <div class="notification is-success global-notification">
-        <p class="notice"><%= notice %></p>
-      </div>
-    <% end %>
-    <% if flash[:alert] %>
-    <div class="notification is-danger global-notification">
-      <p class="alert"><%= alert %></p>
+  <% if flash[:notice] %>
+    <div id="notification" class="notification is-success global-notification">
+      <p id="close" class="notice"><%= notice %></p>
     </div>
-    <% end %>
+  <% end %>
+  <% if flash[:alert] %>
+  <div class="notification is-danger global-notification">
+    <p class="alert"><%= alert %></p>
+  </div>
+  <% end %>
   <nav class="navbar is-link" role="navigation" aria-label="main navigation">
     <div class="navbar-brand">
       <%= link_to root_path, class:"navbar-item" do %>
@@ -36,10 +36,10 @@
       <div class="navbar-end">
         <% if user_signed_in? %>
         <div class="navbar-item has-dropdown is-hoverable">
-          <%#= link_to 'New', '#', class: "navbar-link" %>
+          <%= link_to 'New', '#', class: "navbar-link" %>
           <div class="navbar-dropdown">
-            <%#= link_to 'Project', new_project_path, class:"navbar-item" %>
-            <%#= link_to 'Team', new_team_path, class:"navbar-item" %>
+            <%= link_to 'Project', new_project_path, class:"navbar-item" %>
+            <%= link_to 'Team', new_team_path, class:"navbar-item" %>
           </div>
         </div>
         <div class="navbar-item has-dropdown is-hoverable">
