added gems / fixed Vue / fixed email smtp

--- a/app/views/teams/_form.html.erb
+++ b/app/views/teams/_form.html.erb
@@ -40,9 +40,13 @@
 
 		<div class="field">
 			<div class="control">
-				<button v-on:click="removeUser(index)" class="button is-small">
-					Remove
-				</button>
+				<% if current_user %>
+						
+				<% else %>
+					<button v-on:click="removeUser(index)" class="button is-small">
+						Remove
+					</button>
+				<% end %>
 			</div>
 		</div>
 
